@@ -16,6 +16,12 @@
  * タブ名入力ダイアログで正しくキャンセルできない場合があるバグを修正
  * 編集メニューの抽出条件入力について、PublicSearchタブ以外では無効にするようにした
  * 認証エラーの場合にエラー内容を表示するようにした
+ * "Goole:"と始める文字列をポストすることによって検索する機能で、小文字でもよいようにした
+ * ウインドウサイズを狭くした状態でTweenをアクティブにするとステータスバーが消える問題に対処
+ * 振り分けルール画面で選択しているタブの種別を表示するようにした
+ * 振り分けルール画面でルールを複数選択して別のタブへコピー/移動/削除が行えるようにした
+ * 振り分けルール画面で▲、▼ボタンを新設し、ルールの順番を変えられるようにした
+ * 一部においてタブ名/文字列入力ダイアログでのキャンセルを考慮していなかったバグを修正
 ==== Ver 0.9.2.3(2010/06/14)
  * DM送信で複数行を考慮していなかったのを修正(開発版のみ。安定版では問題ありません)
  * 画像プレビューで未対応画像形式のチェックをするようにした
